springboot2项目中使用websocket

--- a/springboot2-websocket/src/main/resources/templates/websocket.html
+++ b/springboot2-websocket/src/main/resources/templates/websocket.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Thymeleaf使用</title>
-    <script type="text/javascript" th:src="@{static/js/stomp.min.js}"></script>
-    <script type="text/javascript" th:src="@{static/js/sockjs.min.js}"></script>
+    <script type="text/javascript" th:src="@{static/js/stomp/stomp.min.js}"></script>
+    <script type="text/javascript" th:src="@{static/js/stomp/sockjs.min.js}"></script>
     <script type="text/javascript" th:src="@{static/js/jquery-1.9.1.min.js}"></script>
     <script type="text/javascript">
         $(function () {
