--- a/springboot2-websocket/src/main/resources/templates/vue_websocket.html
+++ b/springboot2-websocket/src/main/resources/templates/vue_websocket.html
@@ -6,13 +6,10 @@
     <title>Thymeleaf使用</title>
     <script type="text/javascript" th:src="@{static/js/vue/vue-2.4.0.js}"></script>
     <script type="text/javascript" th:src="@{static/js/vue/vue-resource-1.3.4.js}"></script>
-    <script type="text/javascript">
-
-    </script>
 </head>
 <body>
 
-<div class="container">
+<div class="container" id="app">
     <div class="input-group mb-3">
         <div class="input-group-prepend">
             <label class="input-group-text" for="inputGroupSelect01">用户</label>
@@ -22,18 +19,71 @@
         </select>
     </div>
     <div class="input-group mb-3">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" id="all">
         <div class="input-group-append">
-            <span class="input-group-text" id="btn1">发送给所有人</span>
+            <span class="input-group-text" id="btn1" >发送给所有人</span>
         </div>
     </div>
     <div class="input-group mb-3">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" id="single" v-model="singleMsg">
         <div class="input-group-append">
-            <span class="input-group-text" id="btn2">发送给单人</span>
+            <span class="input-group-text" id="btn2" ><button @click="single">发送给单人</button></span>
         </div>
     </div>
 </div>
 
 </body>
+<script type="text/javascript">
+    var vm = new Vue({
+        el: '#app',
+        data(){
+            return {
+                singleMsg : ''
+            }
+        },
+        created(){  // 页面创建生命周期函数
+            this.initWebSocket()
+        },
+        destroyed: function () { // 离开页面生命周期函数
+            this.websocketclose();
+        },
+        methods:{
+            collapse: function(){
+                this.isCollapse = !this.isCollapse;
+                if (this.isCollapse) {
+                    this.iconClass = "cebianlanzhankai";
+                } else{
+                    this.iconClass = "cebianlanshouhui";
+                }
+            },
+            initWebSocket: function () {
+                // WebSocket与普通的请求所用协议有所不同，ws等同于http，wss等同于https
+                this.websock = new WebSocket("ws://localhost:8106/websocket1/DPS007");
+                this.websock.onopen = this.websocketonopen;
+                this.websock.onerror = this.websocketonerror;
+                this.websock.onmessage = this.websocketonmessage;
+                this.websock.onclose = this.websocketclose;
+            },
+            websocketonopen: function () {
+                console.log("WebSocket连接成功");
+            },
+            websocketonerror: function (e) {
+                console.log("WebSocket连接发生错误");
+            },
+            websocketonmessage: function (e) {
+                //    var da = JSON.parse(e.data);
+                var da = (e.data);
+                console.log(da);
+                this.message = da;
+            },
+            websocketclose: function (e) {
+                console.log("connection closed (" + e.code + ")");
+            },
+
+            single(e) {
+                this.websock.send(this.singleMsg);
+            }
+        }
+    });
+</script>
 </html>
