--- a/springboot2-spring-session/springboot2-spring-session-redis-two/src/main/resources/templates/index.html
+++ b/springboot2-spring-session/springboot2-spring-session-redis-two/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
     var vue = new Vue({
         el: '#app',
         data: {
-            content: '这是index页面啊!'
+            content: '这是Spring Session Redis Two的index页面啊!'
         },
         methods: {
 
